# itemania-server

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
config/: urls.py
config/settings/: base.py  local.py
itemania/items/: apps.py  model_factories.py  models.py  urls.py  validators.py
itemania/items/api/: paginators.py  serializers.py  views.py
itemania/items/management/commands/: generate_items.py
itemania/items/migrations/: 0001_initial.py  0002_alter_item_price.py  0003_alter_item_price.py  0004_alter_item_name.py  0005_alter_item_image.py  0006_alter_item_name.py
itemania/users/: apps.py  managers.py  models.py  urls.py
itemania/users/api/: serializers.py
itemania/users/migrations/: 0001_initial.py
